# NN-impl

./: .gitignore  CMakeLists.txt  plan.txt
include/: Neural_Network.h  Node.h
src/: Neural_Network.cpp  Node.cpp  main.cpp
